5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1756_762.log
== TEST (2019-05-22 14:28:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
s=""
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:28:20) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
s=""
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:28:27) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
s=""
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:28:35) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
s=""
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:32:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=int(input("Digite os caracteres: "))
print(s[0:2])
print(s[2:4])
print(s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:33:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:04) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vet[int(s[2:4]-1) "de" s[4:]])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vet[int(s[2:4]-1) "de" s[4:]])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:30) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:39:38) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:40:21) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:41:14) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:41:44) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vet_mes[int(s[2:4])-1 "de" s[4:]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vet_mes[int(s[2:4])-1 "de" s[4:]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:12) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" vt[int(s[2:4])-1 "de" s[4:]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:43) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de"  "de" s[4:]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de"  "de" s[4:]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:42:59) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0]
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0]
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:06) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:07) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:08) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:43:09) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[2:4] "de" s[4:0])
-- ERROR:
File "XXXX", line 9
    print(s[2:4] "de" s[4:0])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:44:40) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[0:2] "de" vt[int(s[2:4]-1 "de" s[4:])
-- ERROR:
File "XXXX", line 9
    print(s[0:2] "de" vt[int(s[2:4]-1 "de" s[4:])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:45:37) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[0:2] "de" vt[int(s[2:4])]-1 "de" s[4:])
-- ERROR:
File "XXXX", line 9
    print(s[0:2] "de" vt[int(s[2:4])]-1 "de" s[4:])
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:55:47) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[0:2] + "de" + vet_mes[int(s[2:4])]-1 + "de" + s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:57:13) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[0:2] + "de" + vet_mes[int(s[2:4])-1] + "de" + s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 15:57:55) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 15:58:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])
print(s[2:4])
print(s[4:])
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.5763
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:33:38) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])#dia
print(s[2:4])#mes
print(s[4:])#ano
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.384577
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:33:45) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2])#dia
print(s[2:4])#mes
print(s[4:])#ano
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.50623
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:34:03) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2]) #dia
print(s[2:4]) #mes
print(s[4:]) #ano
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.346965
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:34:05) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2]) #dia
print(s[2:4]) #mes
print(s[4:]) #ano
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:34:23) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2]) #dia
print(s[2:4]) #mes
print(s[4:]) #ano
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.532714
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 17:37:01) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2]) # Vetor contendo os dias do ano
print(s[2:4]) # Vetor contendo os meses do ano
print(s[4:]) # Vetor contendo o ano
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:37:07) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
print(s[0:2]) # Vetor contendo os dias do ano
print(s[2:4]) # Vetor contendo os meses do ano
print(s[4:]) # Vetor contendo o ano
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.376711
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:37:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
print(s[0:2])
# Vetor contendo os meses do ano
print(s[2:4])
 # Vetor contendo o ano
print(s[4:])
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.527693
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:38:02) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
print(s[0:2])
# Vetor contendo os meses do ano
print(s[2:4])
 # Vetor contendo o ano
print(s[4:])
# Vetor contendo os meses
int(s[2:4])
print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.35937
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 17:38:11) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
print(s[0:2])
# Vetor contendo os meses do ano
print(s[2:4])
 # Vetor contendo o ano
print(s[4:])
# Vetor contendo os meses
int(s[2:4])

print(s[0:2] + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- EXECUTION TIME:
0.582207
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26
11
1982
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07
07
1854
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22
08
2000
22 de agosto de 2000
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:14:09) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
dd=(s[0:2])
# Vetor contendo os meses do ano
print(s[2:4])
 # Vetor contendo o ano
print(s[4:])
# Vetor contendo os meses
int(s[2:4])

print(dd + " de " + vet_mes[int(s[2:4])-1] + " de " + s[4:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:15:38) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
dd=(s[0:2])
# Vetor contendo os meses do ano
mes=(s[2:4])
 # Vetor contendo o ano
aaaa=(s[4:])
# Vetor contendo os meses
int(s[2:4])

mm= vet_mes[int(s[2:4])-1]


print(dd + " de " + mm + " de " + aaaa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:15:51) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
dd=(s[0:2])
# Vetor contendo os meses do ano
mes=(s[2:4])
 # Vetor contendo o ano
aaaa=(s[4:])
# Vetor contendo os meses
int(s[2:4])

mm= vet_mes[int(s[2:4])-1]


print(dd + " de " + mm + " de " + aaaa)
-- EXECUTION TIME:
0.375264
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:17:46) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
dd=(s[0:2])
# Vetor contendo os meses do ano
mes=(s[2:4])
 # Vetor contendo o ano
aaaa=(s[4:])
# Vetor contendo os meses
int(s[2:4])

mm= vet_mes[int(s[2:4])-1]

print(dd + " de " + mm + " de " + aaaa)
-- EXECUTION TIME:
0.345803
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:17:50) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
dd=(s[0:2])
# Vetor contendo os meses do ano
mes=(s[2:4])
 # Vetor contendo o ano
aaaa=(s[4:])
# Vetor contendo os meses
int(s[2:4])

mm= vet_mes[int(s[2:4])-1]

print(dd + " de " + mm + " de " + aaaa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:18:00) 
-- CODE:
from numpy import *
# Vetor contendo o nome dos meses do ano
vet_mes = array(['janeiro', 'fevereiro', 'marco', 'abril', 'maio', 'junho', 'julho', 'agosto', 'setembro', 'outubro', 'novembro', 'dezembro'])
s=input("Digite os caracteres: ")
 # Vetor contendo os dias do ano
dd=(s[0:2])
# Vetor contendo os meses do ano
mes=(s[2:4])
 # Vetor contendo o ano
aaaa=(s[4:])
# Vetor contendo os meses
int(s[2:4])

mm= vet_mes[int(s[2:4])-1]

print(dd + " de " + mm + " de " + aaaa)
-- EXECUTION TIME:
0.525443
-- TEST CASE 1:
---- input:
26111982
---- correct output:
26 de novembro de 1982
---- user output:
26 de novembro de 1982
-- TEST CASE 2:
---- input:
07071854
---- correct output:
07 de julho de 1854
---- user output:
07 de julho de 1854
-- TEST CASE 3:
---- input:
22082000
---- correct output:
22 de agosto de 2000
---- user output:
22 de agosto de 2000
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
